use immutablellist for incompatible plugin list